Fix friendly representation alignment issue.

--- a/methanal/static/styles/methanal.css
+++ b/methanal/static/styles/methanal.css
@@ -257,9 +257,11 @@ optgroup option {
 
 .friendly-representation {
     font-weight: bold;
+    font-style: italic;
     font-size: 85%;
-    padding: 0.5ex;
-    float: left;
+    padding: 0 0.25em;
+    line-height: 2em;
+    vertical-align: middle;
 }
 
 .embedded-label {
